# docker-vambn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  Dockerfile  LICENSE  Makefile  R.yml  README.md  Snakefile  default_vambn_config.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  r-dependencies.R
.github/scripts/: get_version.py
.github/workflows/: build.yml  ci.yml  main.yml
data/raw/: blacklist_texas.csv  config_texas.json  grouping_texas.csv  groups_texas.txt  whitelist_texas.csv
docker/: Dockerfile.mlflow  Dockerfile.snakemake
docs/: configuration.md  index.md  python.md  r.md  setup.md  troubleshooting.md  vambn.md  walkthrough.md
docs/api/: data.md  metrics.md  modelling.md  utils.md  visualization.md
docs/api/modelling/: distributions.md  mtl.md
docs/api/modelling/models/: hivae.md
notebooks/: convert_texas.py
snakemake_modules/: modelling.snakefile  modular-modelling.snakefile  modular-postprocessing.snakefile  preprocessing.snakefile  setup.snakefile  traditional-modelling.snakefile  traditional-postprocessing.snakefile
tests/: conftest.py  test_gumbel_distribution.py  test_layers.py  test_mtl.py
tests/distributions/: test_truncated_normal.py
tests/metrics/: test_jensen_shannon.py
vambn/: __init__.py
vambn-r/: bayesian_net.R  bayesian_net_permutation.R  generate_syn_patients.R  helpers.R  make_corrplot.R  vis_graph.R
vambn/02_config/: config_python.txt  config_r.yml  install_packages.R  requirements.txt
vambn/03_code/: HIVAE.py  bnet.R  hivae_bayes-opt.py  hivae_grid-search.py  hivae_modelling.py  main.R  plots_generation.R
vambn/data/: dataclasses.py  datasets.py  helpers.py  make_data.py  scalers.py
vambn/metrics/: __init__.py  auc.py  categorical.py  continous.py  jensen_shannon.py  relative_correlation.py
vambn/modelling/: run_model.py
vambn/modelling/distributions/: categorical.py  gumbel_distribution.py  gumbel_softmax.py  parameters.py  truncated_normal.py
vambn/modelling/models/: __init__.py  config.py  conversion.py  gan.py  layers.py  templates.py
vambn/modelling/models/hivae/: config.py  decoder.py  encoder.py  gan_hivae.py  heads.py  hivae.py  modular.py  normalization.py  outputs.py  shared.py  trainer.py
vambn/modelling/mtl/: minnormsolver.py  moo.py  mtl.py  parameters.py  utils.py
vambn/utils/: config.py  exceptions.py  helpers.py  logging.py  syndat_conversion.py  trial_counter.py
vambn/visualization/: calculate_metrics.py  distribution.py  generate_jsd_plot.py  generate_optuna_plots.py  generate_results_plot.py  generate_tsne_plot.py  generate_umap_plot.py  jsd_by_module.py
