[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "vambn"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mkdocstrings-python (>=1.10.5,<2.0.0)",
    "mkdocs-material @ git+https://github.com/squidfunk/mkdocs-material.git",
    "snakemake (>=8.27.1,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "scipy (>=1.15.0,<2.0.0)",
    "optuna (==3.5.0)",
    "scikit-learn (>=1.2.1,<2.0.0)",
    "mlflow (>=2.1.1,<3.0.0)",
    "typer (==0.9.0)",
    "plotly (>=5.13.0,<6.0.0)",
    "seaborn (>=0.12.2,<0.13.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    "openpyxl (>=3.1.2,<4.0.0)",
    "sqlalchemy (==1.4.46)",
    "protobuf (==3.20)",
    "plotnine (>=0.12.4,<0.13.0)",
    "lightning (>=2.0.1,<3.0.0)",
    "kaleido (==0.2.1)",
    "cairosvg (>=2.7.1,<3.0.0)",
    "typeguard (>=4.1.5,<5.0.0)",
    "setuptools-cuda (>=0.0.6,<0.0.7)",
    "torchmetrics (>=1.2.0,<2.0.0)",
    "pydantic (>=2.4.2,<3.0.0)",
    "jupyter (>=1.0.0,<2.0.0)",
    "wandb (>=0.16.0,<0.17.0)",
    "tensorboardx (>=2.6.2.2,<3.0.0.0)",
    "tensorboard (>=2.15.1,<3.0.0)",
    "pymysql (>=1.1.0,<2.0.0)",
    "dill (>=0.3.7,<0.4.0)",
    "paramiko (>=3.3.1,<4.0.0)",
    "pysftp (>=0.2.9,<0.3.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "qpth (>=0.0.16,<0.0.17)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "pulp (==2.7)",
    "umap-learn (>=0.5.5,<0.6.0)",
    "radian (>=0.6.12,<0.7.0)",
    "syndat (>=0.0.2,<0.0.3)",
    "mkdocs (>=1.6.0,<2.0.0)",
    "mkdocstrings (>=0.27.0,<0.28.0)",
    "pymdown-extensions (>=10.8.1,<11.0.0)",
    "mkdocs-autorefs (>=1.2.0,<2.0.0)",
]

[tool.poetry]
requires-poetry = ">=2.0"
name = "vambn"
version = "2.0.0"
description = ""
authors = [
    "Manuel Lentzen <manuel.lentzen@scai.fraunhofer.de>",
    "Sophia Krix <sophia.krix@scai.fraunhofer.de>",
    "Diego Valderama <diego.felipe.valderrama.nino@scai.fraunhofer.de",
    "Tamara Raschka <tamara.raschka@scai.fraunhofer.de>",
]
readme = "README.md"
[[tool.poetry.packages]]
include = "vambn"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl"
priority = "explicit"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "v$version"

[tool.ruff]
line-length = 80
fix = true
indent-width = 4
target-version = "py311"
ignore-init-module-imports = true
exclude = ["**/__init__.py"]

[tool.pytpye]
disable = ["recursion-error"]


[tool.ruff.format]
quote-style = "double"

[tool.poetry.dependencies.torchvision]
version = "0.17.0+cpu"
source = "torch"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 80
ignore-overlong-task-comments = false
max-doc-length = 80

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
commitizen = "^2.40.0"
pytest = "^7.2.1"
autopep8 = "^2.0.1"
yapf = "^0.32.0"
isort = "^5.11.4"
pytest-xdist = "^3.2.0"
autoflake = "^2.2.1"
pytype = "^2023.10.31"
pyre-check = "^0.9.19"
ruff = "^0.1.5"
vulture = "^2.11"
pyright = "^1.1.350"
rope = "^1.13.0"
ipykernel = "^6.29.5"
